parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> body
Rule 1     body -> block
Rule 2     block -> mline
Rule 3     mline -> line
Rule 4     mline -> mline line
Rule 5     line -> Hline
Rule 6     line -> gumpline
Rule 7     line -> wordlineEnd
Rule 8     line -> blockquoteblock
Rule 9     line -> Hr Cr
Rule 10    line -> CodeBlockEnd Cr
Rule 11    line -> Li0Block
Rule 12    CodeBlockText -> CodeBlock Cr wordlineinit
Rule 13    CodeBlockText -> CodeBlockText Cr wordlineinit
Rule 14    CodeBlockEnd -> CodeBlockText Cr CodeBlock
Rule 15    gumpline -> Gump Link Cr
Rule 16    Hline -> Hn wordlineinit Cr
Rule 17    wordlineinit -> Text
Rule 18    wordlineinit -> specialtext
Rule 19    wordlineinit -> wordlineinit Text
Rule 20    wordlineinit -> wordlineinit specialtext
Rule 21    wordlineinit -> Href
Rule 22    wordlineEnd -> wordlineinit Cr
Rule 23    specialtext -> Strong
Rule 24    specialtext -> CodeLine
Rule 25    specialtext -> EmWord
Rule 26    specialtext -> linkword
Rule 27    specialtext -> Color
Rule 28    blockquoteline -> Blockquote wordlineinit Cr
Rule 29    blockquoteline -> blockquoteline blockquoteline
Rule 30    blockquoteblock -> blockquoteline
Rule 31    linkword -> LinkWordName Link
Rule 32    Li0List -> Li0 wordlineinit Cr
Rule 33    Li0List -> Li0List Li0List
Rule 34    Li0List -> Li0 wordlineinit Cr Li1Block
Rule 35    Li0Block -> Li0List
Rule 36    Li0speList -> Li0spe wordlineinit Cr
Rule 37    Li0speList -> Li0speList Li0speList
Rule 38    Li0speList -> Li0spe wordlineinit Cr Li1Block
Rule 39    Li0Block -> Li0speList
Rule 40    Li1List -> Li1 wordlineinit Cr
Rule 41    Li1List -> Li1List Li1List
Rule 42    Li1List -> Li1 wordlineinit Cr Li2Block
Rule 43    Li1Block -> Li1List
Rule 44    Li1speList -> Li1spe wordlineinit Cr
Rule 45    Li1speList -> Li1speList Li1speList
Rule 46    Li1speList -> Li1spe wordlineinit Cr Li2Block
Rule 47    Li1Block -> Li1speList
Rule 48    Li2List -> Li2 wordlineinit Cr
Rule 49    Li2List -> Li2List Li2List
Rule 50    Li2speList -> Li2spe wordlineinit Cr
Rule 51    Li2speList -> Li2speList Li2speList
Rule 52    Li2Block -> Li2speList
Rule 53    Li2Block -> Li2List

Terminals, with rules where they appear

Blockquote           : 28
CodeBlock            : 12 14
CodeLine             : 24
Color                : 27
Cr                   : 9 10 12 13 14 15 16 22 28 32 34 36 38 40 42 44 46 48 50
EmWord               : 25
Gump                 : 15
Hn                   : 16
Hr                   : 9
Href                 : 21
Li0                  : 32 34
Li0spe               : 36 38
Li1                  : 40 42
Li1spe               : 44 46
Li2                  : 48
Li2spe               : 50
Link                 : 15 31
LinkWordName         : 31
Strong               : 23
Text                 : 17 19
error                : 

Nonterminals, with rules where they appear

CodeBlockEnd         : 10
CodeBlockText        : 13 14
Hline                : 5
Li0Block             : 11
Li0List              : 33 33 35
Li0speList           : 37 37 39
Li1Block             : 34 38
Li1List              : 41 41 43
Li1speList           : 45 45 47
Li2Block             : 42 46
Li2List              : 49 49 53
Li2speList           : 51 51 52
block                : 1
blockquoteblock      : 8
blockquoteline       : 29 29 30
body                 : 0
gumpline             : 6
line                 : 3 4
linkword             : 26
mline                : 2 4
specialtext          : 18 20
wordlineEnd          : 7
wordlineinit         : 12 13 16 19 20 22 28 32 34 36 38 40 42 44 46 48 50

Parsing method: SLR

state 0

    (0) S' -> . body
    (1) body -> . block
    (2) block -> . mline
    (3) mline -> . line
    (4) mline -> . mline line
    (5) line -> . Hline
    (6) line -> . gumpline
    (7) line -> . wordlineEnd
    (8) line -> . blockquoteblock
    (9) line -> . Hr Cr
    (10) line -> . CodeBlockEnd Cr
    (11) line -> . Li0Block
    (16) Hline -> . Hn wordlineinit Cr
    (15) gumpline -> . Gump Link Cr
    (22) wordlineEnd -> . wordlineinit Cr
    (30) blockquoteblock -> . blockquoteline
    (14) CodeBlockEnd -> . CodeBlockText Cr CodeBlock
    (35) Li0Block -> . Li0List
    (39) Li0Block -> . Li0speList
    (17) wordlineinit -> . Text
    (18) wordlineinit -> . specialtext
    (19) wordlineinit -> . wordlineinit Text
    (20) wordlineinit -> . wordlineinit specialtext
    (21) wordlineinit -> . Href
    (28) blockquoteline -> . Blockquote wordlineinit Cr
    (29) blockquoteline -> . blockquoteline blockquoteline
    (12) CodeBlockText -> . CodeBlock Cr wordlineinit
    (13) CodeBlockText -> . CodeBlockText Cr wordlineinit
    (32) Li0List -> . Li0 wordlineinit Cr
    (33) Li0List -> . Li0List Li0List
    (34) Li0List -> . Li0 wordlineinit Cr Li1Block
    (36) Li0speList -> . Li0spe wordlineinit Cr
    (37) Li0speList -> . Li0speList Li0speList
    (38) Li0speList -> . Li0spe wordlineinit Cr Li1Block
    (23) specialtext -> . Strong
    (24) specialtext -> . CodeLine
    (25) specialtext -> . EmWord
    (26) specialtext -> . linkword
    (27) specialtext -> . Color
    (31) linkword -> . LinkWordName Link

    Hr              shift and go to state 6
    Hn              shift and go to state 9
    Gump            shift and go to state 14
    Text            shift and go to state 23
    Href            shift and go to state 8
    Blockquote      shift and go to state 5
    CodeBlock       shift and go to state 20
    Li0             shift and go to state 15
    Li0spe          shift and go to state 2
    Strong          shift and go to state 10
    CodeLine        shift and go to state 16
    EmWord          shift and go to state 25
    Color           shift and go to state 22
    LinkWordName    shift and go to state 30

    body                           shift and go to state 11
    mline                          shift and go to state 21
    blockquoteblock                shift and go to state 1
    gumpline                       shift and go to state 12
    CodeBlockText                  shift and go to state 4
    Li0List                        shift and go to state 3
    Li0speList                     shift and go to state 13
    Li0Block                       shift and go to state 24
    specialtext                    shift and go to state 7
    Hline                          shift and go to state 26
    blockquoteline                 shift and go to state 27
    wordlineEnd                    shift and go to state 17
    linkword                       shift and go to state 28
    CodeBlockEnd                   shift and go to state 18
    line                           shift and go to state 19
    wordlineinit                   shift and go to state 29
    block                          shift and go to state 31

state 1

    (8) line -> blockquoteblock .

    $end            reduce using rule 8 (line -> blockquoteblock .)
    Hr              reduce using rule 8 (line -> blockquoteblock .)
    Hn              reduce using rule 8 (line -> blockquoteblock .)
    Gump            reduce using rule 8 (line -> blockquoteblock .)
    Blockquote      reduce using rule 8 (line -> blockquoteblock .)
    CodeBlock       reduce using rule 8 (line -> blockquoteblock .)
    Li0             reduce using rule 8 (line -> blockquoteblock .)
    Li0spe          reduce using rule 8 (line -> blockquoteblock .)
    Text            reduce using rule 8 (line -> blockquoteblock .)
    Strong          reduce using rule 8 (line -> blockquoteblock .)
    CodeLine        reduce using rule 8 (line -> blockquoteblock .)
    EmWord          reduce using rule 8 (line -> blockquoteblock .)
    Color           reduce using rule 8 (line -> blockquoteblock .)
    Href            reduce using rule 8 (line -> blockquoteblock .)
    LinkWordName    reduce using rule 8 (line -> blockquoteblock .)


state 2

    (36) Li0speList -> Li0spe . wordlineinit Cr
    (38) Li0speList -> Li0spe . wordlineinit Cr Li1Block
    (17) wordlineinit -> . Text
    (18) wordlineinit -> . specialtext
    (19) wordlineinit -> . wordlineinit Text
    (20) wordlineinit -> . wordlineinit specialtext
    (21) wordlineinit -> . Href
    (23) specialtext -> . Strong
    (24) specialtext -> . CodeLine
    (25) specialtext -> . EmWord
    (26) specialtext -> . linkword
    (27) specialtext -> . Color
    (31) linkword -> . LinkWordName Link

    Text            shift and go to state 23
    Href            shift and go to state 8
    Strong          shift and go to state 10
    CodeLine        shift and go to state 16
    EmWord          shift and go to state 25
    Color           shift and go to state 22
    LinkWordName    shift and go to state 30

    linkword                       shift and go to state 28
    wordlineinit                   shift and go to state 32
    specialtext                    shift and go to state 7

state 3

    (35) Li0Block -> Li0List .
    (33) Li0List -> Li0List . Li0List
    (32) Li0List -> . Li0 wordlineinit Cr
    (33) Li0List -> . Li0List Li0List
    (34) Li0List -> . Li0 wordlineinit Cr Li1Block

  ! shift/reduce conflict for Li0 resolved as shift
    $end            reduce using rule 35 (Li0Block -> Li0List .)
    Hr              reduce using rule 35 (Li0Block -> Li0List .)
    Hn              reduce using rule 35 (Li0Block -> Li0List .)
    Gump            reduce using rule 35 (Li0Block -> Li0List .)
    Blockquote      reduce using rule 35 (Li0Block -> Li0List .)
    CodeBlock       reduce using rule 35 (Li0Block -> Li0List .)
    Li0spe          reduce using rule 35 (Li0Block -> Li0List .)
    Text            reduce using rule 35 (Li0Block -> Li0List .)
    Strong          reduce using rule 35 (Li0Block -> Li0List .)
    CodeLine        reduce using rule 35 (Li0Block -> Li0List .)
    EmWord          reduce using rule 35 (Li0Block -> Li0List .)
    Color           reduce using rule 35 (Li0Block -> Li0List .)
    Href            reduce using rule 35 (Li0Block -> Li0List .)
    LinkWordName    reduce using rule 35 (Li0Block -> Li0List .)
    Li0             shift and go to state 15

  ! Li0             [ reduce using rule 35 (Li0Block -> Li0List .) ]

    Li0List                        shift and go to state 33

state 4

    (14) CodeBlockEnd -> CodeBlockText . Cr CodeBlock
    (13) CodeBlockText -> CodeBlockText . Cr wordlineinit

    Cr              shift and go to state 34


state 5

    (28) blockquoteline -> Blockquote . wordlineinit Cr
    (17) wordlineinit -> . Text
    (18) wordlineinit -> . specialtext
    (19) wordlineinit -> . wordlineinit Text
    (20) wordlineinit -> . wordlineinit specialtext
    (21) wordlineinit -> . Href
    (23) specialtext -> . Strong
    (24) specialtext -> . CodeLine
    (25) specialtext -> . EmWord
    (26) specialtext -> . linkword
    (27) specialtext -> . Color
    (31) linkword -> . LinkWordName Link

    Text            shift and go to state 23
    Href            shift and go to state 8
    Strong          shift and go to state 10
    CodeLine        shift and go to state 16
    EmWord          shift and go to state 25
    Color           shift and go to state 22
    LinkWordName    shift and go to state 30

    linkword                       shift and go to state 28
    wordlineinit                   shift and go to state 35
    specialtext                    shift and go to state 7

state 6

    (9) line -> Hr . Cr

    Cr              shift and go to state 36


state 7

    (18) wordlineinit -> specialtext .

    Cr              reduce using rule 18 (wordlineinit -> specialtext .)
    Text            reduce using rule 18 (wordlineinit -> specialtext .)
    Strong          reduce using rule 18 (wordlineinit -> specialtext .)
    CodeLine        reduce using rule 18 (wordlineinit -> specialtext .)
    EmWord          reduce using rule 18 (wordlineinit -> specialtext .)
    Color           reduce using rule 18 (wordlineinit -> specialtext .)
    LinkWordName    reduce using rule 18 (wordlineinit -> specialtext .)


state 8

    (21) wordlineinit -> Href .

    Cr              reduce using rule 21 (wordlineinit -> Href .)
    Text            reduce using rule 21 (wordlineinit -> Href .)
    Strong          reduce using rule 21 (wordlineinit -> Href .)
    CodeLine        reduce using rule 21 (wordlineinit -> Href .)
    EmWord          reduce using rule 21 (wordlineinit -> Href .)
    Color           reduce using rule 21 (wordlineinit -> Href .)
    LinkWordName    reduce using rule 21 (wordlineinit -> Href .)


state 9

    (16) Hline -> Hn . wordlineinit Cr
    (17) wordlineinit -> . Text
    (18) wordlineinit -> . specialtext
    (19) wordlineinit -> . wordlineinit Text
    (20) wordlineinit -> . wordlineinit specialtext
    (21) wordlineinit -> . Href
    (23) specialtext -> . Strong
    (24) specialtext -> . CodeLine
    (25) specialtext -> . EmWord
    (26) specialtext -> . linkword
    (27) specialtext -> . Color
    (31) linkword -> . LinkWordName Link

    Text            shift and go to state 23
    Href            shift and go to state 8
    Strong          shift and go to state 10
    CodeLine        shift and go to state 16
    EmWord          shift and go to state 25
    Color           shift and go to state 22
    LinkWordName    shift and go to state 30

    linkword                       shift and go to state 28
    wordlineinit                   shift and go to state 37
    specialtext                    shift and go to state 7

state 10

    (23) specialtext -> Strong .

    Cr              reduce using rule 23 (specialtext -> Strong .)
    Text            reduce using rule 23 (specialtext -> Strong .)
    Strong          reduce using rule 23 (specialtext -> Strong .)
    CodeLine        reduce using rule 23 (specialtext -> Strong .)
    EmWord          reduce using rule 23 (specialtext -> Strong .)
    Color           reduce using rule 23 (specialtext -> Strong .)
    LinkWordName    reduce using rule 23 (specialtext -> Strong .)


state 11

    (0) S' -> body .



state 12

    (6) line -> gumpline .

    $end            reduce using rule 6 (line -> gumpline .)
    Hr              reduce using rule 6 (line -> gumpline .)
    Hn              reduce using rule 6 (line -> gumpline .)
    Gump            reduce using rule 6 (line -> gumpline .)
    Blockquote      reduce using rule 6 (line -> gumpline .)
    CodeBlock       reduce using rule 6 (line -> gumpline .)
    Li0             reduce using rule 6 (line -> gumpline .)
    Li0spe          reduce using rule 6 (line -> gumpline .)
    Text            reduce using rule 6 (line -> gumpline .)
    Strong          reduce using rule 6 (line -> gumpline .)
    CodeLine        reduce using rule 6 (line -> gumpline .)
    EmWord          reduce using rule 6 (line -> gumpline .)
    Color           reduce using rule 6 (line -> gumpline .)
    Href            reduce using rule 6 (line -> gumpline .)
    LinkWordName    reduce using rule 6 (line -> gumpline .)


state 13

    (39) Li0Block -> Li0speList .
    (37) Li0speList -> Li0speList . Li0speList
    (36) Li0speList -> . Li0spe wordlineinit Cr
    (37) Li0speList -> . Li0speList Li0speList
    (38) Li0speList -> . Li0spe wordlineinit Cr Li1Block

  ! shift/reduce conflict for Li0spe resolved as shift
    $end            reduce using rule 39 (Li0Block -> Li0speList .)
    Hr              reduce using rule 39 (Li0Block -> Li0speList .)
    Hn              reduce using rule 39 (Li0Block -> Li0speList .)
    Gump            reduce using rule 39 (Li0Block -> Li0speList .)
    Blockquote      reduce using rule 39 (Li0Block -> Li0speList .)
    CodeBlock       reduce using rule 39 (Li0Block -> Li0speList .)
    Li0             reduce using rule 39 (Li0Block -> Li0speList .)
    Text            reduce using rule 39 (Li0Block -> Li0speList .)
    Strong          reduce using rule 39 (Li0Block -> Li0speList .)
    CodeLine        reduce using rule 39 (Li0Block -> Li0speList .)
    EmWord          reduce using rule 39 (Li0Block -> Li0speList .)
    Color           reduce using rule 39 (Li0Block -> Li0speList .)
    Href            reduce using rule 39 (Li0Block -> Li0speList .)
    LinkWordName    reduce using rule 39 (Li0Block -> Li0speList .)
    Li0spe          shift and go to state 2

  ! Li0spe          [ reduce using rule 39 (Li0Block -> Li0speList .) ]

    Li0speList                     shift and go to state 38

state 14

    (15) gumpline -> Gump . Link Cr

    Link            shift and go to state 39


state 15

    (32) Li0List -> Li0 . wordlineinit Cr
    (34) Li0List -> Li0 . wordlineinit Cr Li1Block
    (17) wordlineinit -> . Text
    (18) wordlineinit -> . specialtext
    (19) wordlineinit -> . wordlineinit Text
    (20) wordlineinit -> . wordlineinit specialtext
    (21) wordlineinit -> . Href
    (23) specialtext -> . Strong
    (24) specialtext -> . CodeLine
    (25) specialtext -> . EmWord
    (26) specialtext -> . linkword
    (27) specialtext -> . Color
    (31) linkword -> . LinkWordName Link

    Text            shift and go to state 23
    Href            shift and go to state 8
    Strong          shift and go to state 10
    CodeLine        shift and go to state 16
    EmWord          shift and go to state 25
    Color           shift and go to state 22
    LinkWordName    shift and go to state 30

    linkword                       shift and go to state 28
    wordlineinit                   shift and go to state 40
    specialtext                    shift and go to state 7

state 16

    (24) specialtext -> CodeLine .

    Cr              reduce using rule 24 (specialtext -> CodeLine .)
    Text            reduce using rule 24 (specialtext -> CodeLine .)
    Strong          reduce using rule 24 (specialtext -> CodeLine .)
    CodeLine        reduce using rule 24 (specialtext -> CodeLine .)
    EmWord          reduce using rule 24 (specialtext -> CodeLine .)
    Color           reduce using rule 24 (specialtext -> CodeLine .)
    LinkWordName    reduce using rule 24 (specialtext -> CodeLine .)


state 17

    (7) line -> wordlineEnd .

    $end            reduce using rule 7 (line -> wordlineEnd .)
    Hr              reduce using rule 7 (line -> wordlineEnd .)
    Hn              reduce using rule 7 (line -> wordlineEnd .)
    Gump            reduce using rule 7 (line -> wordlineEnd .)
    Blockquote      reduce using rule 7 (line -> wordlineEnd .)
    CodeBlock       reduce using rule 7 (line -> wordlineEnd .)
    Li0             reduce using rule 7 (line -> wordlineEnd .)
    Li0spe          reduce using rule 7 (line -> wordlineEnd .)
    Text            reduce using rule 7 (line -> wordlineEnd .)
    Strong          reduce using rule 7 (line -> wordlineEnd .)
    CodeLine        reduce using rule 7 (line -> wordlineEnd .)
    EmWord          reduce using rule 7 (line -> wordlineEnd .)
    Color           reduce using rule 7 (line -> wordlineEnd .)
    Href            reduce using rule 7 (line -> wordlineEnd .)
    LinkWordName    reduce using rule 7 (line -> wordlineEnd .)


state 18

    (10) line -> CodeBlockEnd . Cr

    Cr              shift and go to state 41


state 19

    (3) mline -> line .

    $end            reduce using rule 3 (mline -> line .)
    Hr              reduce using rule 3 (mline -> line .)
    Hn              reduce using rule 3 (mline -> line .)
    Gump            reduce using rule 3 (mline -> line .)
    Blockquote      reduce using rule 3 (mline -> line .)
    CodeBlock       reduce using rule 3 (mline -> line .)
    Li0             reduce using rule 3 (mline -> line .)
    Li0spe          reduce using rule 3 (mline -> line .)
    Text            reduce using rule 3 (mline -> line .)
    Strong          reduce using rule 3 (mline -> line .)
    CodeLine        reduce using rule 3 (mline -> line .)
    EmWord          reduce using rule 3 (mline -> line .)
    Color           reduce using rule 3 (mline -> line .)
    Href            reduce using rule 3 (mline -> line .)
    LinkWordName    reduce using rule 3 (mline -> line .)


state 20

    (12) CodeBlockText -> CodeBlock . Cr wordlineinit

    Cr              shift and go to state 42


state 21

    (2) block -> mline .
    (4) mline -> mline . line
    (5) line -> . Hline
    (6) line -> . gumpline
    (7) line -> . wordlineEnd
    (8) line -> . blockquoteblock
    (9) line -> . Hr Cr
    (10) line -> . CodeBlockEnd Cr
    (11) line -> . Li0Block
    (16) Hline -> . Hn wordlineinit Cr
    (15) gumpline -> . Gump Link Cr
    (22) wordlineEnd -> . wordlineinit Cr
    (30) blockquoteblock -> . blockquoteline
    (14) CodeBlockEnd -> . CodeBlockText Cr CodeBlock
    (35) Li0Block -> . Li0List
    (39) Li0Block -> . Li0speList
    (17) wordlineinit -> . Text
    (18) wordlineinit -> . specialtext
    (19) wordlineinit -> . wordlineinit Text
    (20) wordlineinit -> . wordlineinit specialtext
    (21) wordlineinit -> . Href
    (28) blockquoteline -> . Blockquote wordlineinit Cr
    (29) blockquoteline -> . blockquoteline blockquoteline
    (12) CodeBlockText -> . CodeBlock Cr wordlineinit
    (13) CodeBlockText -> . CodeBlockText Cr wordlineinit
    (32) Li0List -> . Li0 wordlineinit Cr
    (33) Li0List -> . Li0List Li0List
    (34) Li0List -> . Li0 wordlineinit Cr Li1Block
    (36) Li0speList -> . Li0spe wordlineinit Cr
    (37) Li0speList -> . Li0speList Li0speList
    (38) Li0speList -> . Li0spe wordlineinit Cr Li1Block
    (23) specialtext -> . Strong
    (24) specialtext -> . CodeLine
    (25) specialtext -> . EmWord
    (26) specialtext -> . linkword
    (27) specialtext -> . Color
    (31) linkword -> . LinkWordName Link

    $end            reduce using rule 2 (block -> mline .)
    Hr              shift and go to state 6
    Hn              shift and go to state 9
    Gump            shift and go to state 14
    Text            shift and go to state 23
    Href            shift and go to state 8
    Blockquote      shift and go to state 5
    CodeBlock       shift and go to state 20
    Li0             shift and go to state 15
    Li0spe          shift and go to state 2
    Strong          shift and go to state 10
    CodeLine        shift and go to state 16
    EmWord          shift and go to state 25
    Color           shift and go to state 22
    LinkWordName    shift and go to state 30

    blockquoteblock                shift and go to state 1
    gumpline                       shift and go to state 12
    Li0List                        shift and go to state 3
    Li0speList                     shift and go to state 13
    Li0Block                       shift and go to state 24
    specialtext                    shift and go to state 7
    Hline                          shift and go to state 26
    blockquoteline                 shift and go to state 27
    wordlineEnd                    shift and go to state 17
    linkword                       shift and go to state 28
    CodeBlockEnd                   shift and go to state 18
    line                           shift and go to state 43
    wordlineinit                   shift and go to state 29
    CodeBlockText                  shift and go to state 4

state 22

    (27) specialtext -> Color .

    Cr              reduce using rule 27 (specialtext -> Color .)
    Text            reduce using rule 27 (specialtext -> Color .)
    Strong          reduce using rule 27 (specialtext -> Color .)
    CodeLine        reduce using rule 27 (specialtext -> Color .)
    EmWord          reduce using rule 27 (specialtext -> Color .)
    Color           reduce using rule 27 (specialtext -> Color .)
    LinkWordName    reduce using rule 27 (specialtext -> Color .)


state 23

    (17) wordlineinit -> Text .

    Cr              reduce using rule 17 (wordlineinit -> Text .)
    Text            reduce using rule 17 (wordlineinit -> Text .)
    Strong          reduce using rule 17 (wordlineinit -> Text .)
    CodeLine        reduce using rule 17 (wordlineinit -> Text .)
    EmWord          reduce using rule 17 (wordlineinit -> Text .)
    Color           reduce using rule 17 (wordlineinit -> Text .)
    LinkWordName    reduce using rule 17 (wordlineinit -> Text .)


state 24

    (11) line -> Li0Block .

    $end            reduce using rule 11 (line -> Li0Block .)
    Hr              reduce using rule 11 (line -> Li0Block .)
    Hn              reduce using rule 11 (line -> Li0Block .)
    Gump            reduce using rule 11 (line -> Li0Block .)
    Blockquote      reduce using rule 11 (line -> Li0Block .)
    CodeBlock       reduce using rule 11 (line -> Li0Block .)
    Li0             reduce using rule 11 (line -> Li0Block .)
    Li0spe          reduce using rule 11 (line -> Li0Block .)
    Text            reduce using rule 11 (line -> Li0Block .)
    Strong          reduce using rule 11 (line -> Li0Block .)
    CodeLine        reduce using rule 11 (line -> Li0Block .)
    EmWord          reduce using rule 11 (line -> Li0Block .)
    Color           reduce using rule 11 (line -> Li0Block .)
    Href            reduce using rule 11 (line -> Li0Block .)
    LinkWordName    reduce using rule 11 (line -> Li0Block .)


state 25

    (25) specialtext -> EmWord .

    Cr              reduce using rule 25 (specialtext -> EmWord .)
    Text            reduce using rule 25 (specialtext -> EmWord .)
    Strong          reduce using rule 25 (specialtext -> EmWord .)
    CodeLine        reduce using rule 25 (specialtext -> EmWord .)
    EmWord          reduce using rule 25 (specialtext -> EmWord .)
    Color           reduce using rule 25 (specialtext -> EmWord .)
    LinkWordName    reduce using rule 25 (specialtext -> EmWord .)


state 26

    (5) line -> Hline .

    $end            reduce using rule 5 (line -> Hline .)
    Hr              reduce using rule 5 (line -> Hline .)
    Hn              reduce using rule 5 (line -> Hline .)
    Gump            reduce using rule 5 (line -> Hline .)
    Blockquote      reduce using rule 5 (line -> Hline .)
    CodeBlock       reduce using rule 5 (line -> Hline .)
    Li0             reduce using rule 5 (line -> Hline .)
    Li0spe          reduce using rule 5 (line -> Hline .)
    Text            reduce using rule 5 (line -> Hline .)
    Strong          reduce using rule 5 (line -> Hline .)
    CodeLine        reduce using rule 5 (line -> Hline .)
    EmWord          reduce using rule 5 (line -> Hline .)
    Color           reduce using rule 5 (line -> Hline .)
    Href            reduce using rule 5 (line -> Hline .)
    LinkWordName    reduce using rule 5 (line -> Hline .)


state 27

    (30) blockquoteblock -> blockquoteline .
    (29) blockquoteline -> blockquoteline . blockquoteline
    (28) blockquoteline -> . Blockquote wordlineinit Cr
    (29) blockquoteline -> . blockquoteline blockquoteline

  ! shift/reduce conflict for Blockquote resolved as shift
    $end            reduce using rule 30 (blockquoteblock -> blockquoteline .)
    Hr              reduce using rule 30 (blockquoteblock -> blockquoteline .)
    Hn              reduce using rule 30 (blockquoteblock -> blockquoteline .)
    Gump            reduce using rule 30 (blockquoteblock -> blockquoteline .)
    CodeBlock       reduce using rule 30 (blockquoteblock -> blockquoteline .)
    Li0             reduce using rule 30 (blockquoteblock -> blockquoteline .)
    Li0spe          reduce using rule 30 (blockquoteblock -> blockquoteline .)
    Text            reduce using rule 30 (blockquoteblock -> blockquoteline .)
    Strong          reduce using rule 30 (blockquoteblock -> blockquoteline .)
    CodeLine        reduce using rule 30 (blockquoteblock -> blockquoteline .)
    EmWord          reduce using rule 30 (blockquoteblock -> blockquoteline .)
    Color           reduce using rule 30 (blockquoteblock -> blockquoteline .)
    Href            reduce using rule 30 (blockquoteblock -> blockquoteline .)
    LinkWordName    reduce using rule 30 (blockquoteblock -> blockquoteline .)
    Blockquote      shift and go to state 5

  ! Blockquote      [ reduce using rule 30 (blockquoteblock -> blockquoteline .) ]

    blockquoteline                 shift and go to state 44

state 28

    (26) specialtext -> linkword .

    Cr              reduce using rule 26 (specialtext -> linkword .)
    Text            reduce using rule 26 (specialtext -> linkword .)
    Strong          reduce using rule 26 (specialtext -> linkword .)
    CodeLine        reduce using rule 26 (specialtext -> linkword .)
    EmWord          reduce using rule 26 (specialtext -> linkword .)
    Color           reduce using rule 26 (specialtext -> linkword .)
    LinkWordName    reduce using rule 26 (specialtext -> linkword .)


state 29

    (22) wordlineEnd -> wordlineinit . Cr
    (19) wordlineinit -> wordlineinit . Text
    (20) wordlineinit -> wordlineinit . specialtext
    (23) specialtext -> . Strong
    (24) specialtext -> . CodeLine
    (25) specialtext -> . EmWord
    (26) specialtext -> . linkword
    (27) specialtext -> . Color
    (31) linkword -> . LinkWordName Link

    Cr              shift and go to state 47
    Text            shift and go to state 45
    Strong          shift and go to state 10
    CodeLine        shift and go to state 16
    EmWord          shift and go to state 25
    Color           shift and go to state 22
    LinkWordName    shift and go to state 30

    linkword                       shift and go to state 28
    specialtext                    shift and go to state 46

state 30

    (31) linkword -> LinkWordName . Link

    Link            shift and go to state 48


state 31

    (1) body -> block .

    $end            reduce using rule 1 (body -> block .)


state 32

    (36) Li0speList -> Li0spe wordlineinit . Cr
    (38) Li0speList -> Li0spe wordlineinit . Cr Li1Block
    (19) wordlineinit -> wordlineinit . Text
    (20) wordlineinit -> wordlineinit . specialtext
    (23) specialtext -> . Strong
    (24) specialtext -> . CodeLine
    (25) specialtext -> . EmWord
    (26) specialtext -> . linkword
    (27) specialtext -> . Color
    (31) linkword -> . LinkWordName Link

    Cr              shift and go to state 49
    Text            shift and go to state 45
    Strong          shift and go to state 10
    CodeLine        shift and go to state 16
    EmWord          shift and go to state 25
    Color           shift and go to state 22
    LinkWordName    shift and go to state 30

    linkword                       shift and go to state 28
    specialtext                    shift and go to state 46

state 33

    (33) Li0List -> Li0List Li0List .
    (33) Li0List -> Li0List . Li0List
    (32) Li0List -> . Li0 wordlineinit Cr
    (33) Li0List -> . Li0List Li0List
    (34) Li0List -> . Li0 wordlineinit Cr Li1Block

  ! shift/reduce conflict for Li0 resolved as shift
    $end            reduce using rule 33 (Li0List -> Li0List Li0List .)
    Hr              reduce using rule 33 (Li0List -> Li0List Li0List .)
    Hn              reduce using rule 33 (Li0List -> Li0List Li0List .)
    Gump            reduce using rule 33 (Li0List -> Li0List Li0List .)
    Blockquote      reduce using rule 33 (Li0List -> Li0List Li0List .)
    CodeBlock       reduce using rule 33 (Li0List -> Li0List Li0List .)
    Li0spe          reduce using rule 33 (Li0List -> Li0List Li0List .)
    Text            reduce using rule 33 (Li0List -> Li0List Li0List .)
    Strong          reduce using rule 33 (Li0List -> Li0List Li0List .)
    CodeLine        reduce using rule 33 (Li0List -> Li0List Li0List .)
    EmWord          reduce using rule 33 (Li0List -> Li0List Li0List .)
    Color           reduce using rule 33 (Li0List -> Li0List Li0List .)
    Href            reduce using rule 33 (Li0List -> Li0List Li0List .)
    LinkWordName    reduce using rule 33 (Li0List -> Li0List Li0List .)
    Li0             shift and go to state 15

  ! Li0             [ reduce using rule 33 (Li0List -> Li0List Li0List .) ]

    Li0List                        shift and go to state 33

state 34

    (14) CodeBlockEnd -> CodeBlockText Cr . CodeBlock
    (13) CodeBlockText -> CodeBlockText Cr . wordlineinit
    (17) wordlineinit -> . Text
    (18) wordlineinit -> . specialtext
    (19) wordlineinit -> . wordlineinit Text
    (20) wordlineinit -> . wordlineinit specialtext
    (21) wordlineinit -> . Href
    (23) specialtext -> . Strong
    (24) specialtext -> . CodeLine
    (25) specialtext -> . EmWord
    (26) specialtext -> . linkword
    (27) specialtext -> . Color
    (31) linkword -> . LinkWordName Link

    CodeBlock       shift and go to state 51
    Text            shift and go to state 23
    Href            shift and go to state 8
    Strong          shift and go to state 10
    CodeLine        shift and go to state 16
    EmWord          shift and go to state 25
    Color           shift and go to state 22
    LinkWordName    shift and go to state 30

    linkword                       shift and go to state 28
    wordlineinit                   shift and go to state 50
    specialtext                    shift and go to state 7

state 35

    (28) blockquoteline -> Blockquote wordlineinit . Cr
    (19) wordlineinit -> wordlineinit . Text
    (20) wordlineinit -> wordlineinit . specialtext
    (23) specialtext -> . Strong
    (24) specialtext -> . CodeLine
    (25) specialtext -> . EmWord
    (26) specialtext -> . linkword
    (27) specialtext -> . Color
    (31) linkword -> . LinkWordName Link

    Cr              shift and go to state 52
    Text            shift and go to state 45
    Strong          shift and go to state 10
    CodeLine        shift and go to state 16
    EmWord          shift and go to state 25
    Color           shift and go to state 22
    LinkWordName    shift and go to state 30

    linkword                       shift and go to state 28
    specialtext                    shift and go to state 46

state 36

    (9) line -> Hr Cr .
